fix links and added text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,9 @@ h1,h2,h3,h4,h5,h6,
 hr,ul,li,ol,ul,
 table,tr,td,th,p,img {
 margin:0;
-padding:0;
+line-height: 1.5;
 }
 
-colors {
-	dark: ;
-	medium:;
-	light:;
-	highlight;
-	mouseover:;
-
-
-}
 img,fieldset {
 	border:none;
 	padding: 1em;
